Update the project to properly handle import sections in Module Overviews for nested modules.

--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -256,8 +256,10 @@
     "        from nbdev.config import get_config\n",
     "        cfg = get_config()\n",
     "        \n",
-    "        # Construct the Python module path using the module name\n",
-    "        python_module_path = cfg.lib_path / f\"{module.name}.py\"\n",
+    "        # For nested modules, we need to construct the proper path\n",
+    "        # If module path is nbs/actions/button.ipynb, the Python module should be at lib/actions/button.py\n",
+    "        relative_path = module.path.relative_to(cfg.nbs_path).with_suffix('.py')\n",
+    "        python_module_path = cfg.lib_path / relative_path\n",
     "        \n",
     "        if python_module_path.exists():\n",
     "            # Read the Python file to extract __all__\n",
@@ -285,7 +287,9 @@
     "                if all_items:\n",
     "                    # Create import statement - replace hyphens with underscores for valid Python imports\n",
     "                    package_name = cfg.lib_name.replace('-', '_')\n",
-    "                    full_module_path = f\"{package_name}.{module.name}\"\n",
+    "                    # Convert file path to module path (e.g., actions/button.py -> actions.button)\n",
+    "                    module_path_parts = relative_path.with_suffix('').parts\n",
+    "                    full_module_path = f\"{package_name}.{'.'.join(module_path_parts)}\"\n",
     "                    \n",
     "                    lines.append(\"```python\")\n",
     "                    lines.append(f\"from {full_module_path} import (\")\n",
@@ -302,20 +306,26 @@
     "                else:\n",
     "                    # Fallback if __all__ not found - replace hyphens with underscores\n",
     "                    package_name = cfg.lib_name.replace('-', '_')\n",
+    "                    module_path_parts = relative_path.with_suffix('').parts\n",
+    "                    full_module_path = f\"{package_name}.{'.'.join(module_path_parts)}\"\n",
     "                    lines.append(\"```python\")\n",
-    "                    lines.append(f\"from {package_name}.{module.name} import *\")\n",
+    "                    lines.append(f\"from {full_module_path} import *\")\n",
     "                    lines.append(\"```\")\n",
     "            \n",
     "            except Exception:\n",
     "                # Fallback if parsing fails - replace hyphens with underscores\n",
     "                package_name = cfg.lib_name.replace('-', '_')\n",
+    "                module_path_parts = relative_path.with_suffix('').parts\n",
+    "                full_module_path = f\"{package_name}.{'.'.join(module_path_parts)}\"\n",
     "                lines.append(\"```python\")\n",
-    "                lines.append(f\"from {package_name}.{module.name} import *\")\n",
+    "                lines.append(f\"from {full_module_path} import *\")\n",
     "                lines.append(\"```\")\n",
     "        else:\n",
     "            # Fallback if Python file doesn't exist\n",
+    "            module_path_parts = relative_path.with_suffix('').parts\n",
+    "            module_name = '.'.join(module_path_parts)\n",
     "            lines.append(\"```python\")\n",
-    "            lines.append(f\"# No corresponding Python module found for {module.name}\")\n",
+    "            lines.append(f\"# No corresponding Python module found for {module_name}\")\n",
     "            lines.append(\"```\")\n",
     "    except Exception:\n",
     "        # Final fallback\n",
@@ -1057,14 +1067,7 @@
       "#### Import\n",
       "\n",
       "```python\n",
-      "from cjm_nbdev_overview.core import (\n",
-      "    NotebookInfo,\n",
-      "    DirectoryInfo,\n",
-      "    get_notebook_files,\n",
-      "    get_subdirectories,\n",
-      "    read_notebook,\n",
-      "    get_cell_source\n",
-      ")\n",
+      "# Import statements not available\n",
       "```\n",
       "\n",
       "#### Functions\n",
@@ -1161,19 +1164,7 @@
       "#### Import\n",
       "\n",
       "```python\n",
-      "from cjm_nbdev_overview.parsers import (\n",
-      "    FunctionInfo,\n",
-      "    VariableInfo,\n",
-      "    ClassInfo,\n",
-      "    ModuleInfo,\n",
-      "    extract_docments_signature,\n",
-      "    parse_function,\n",
-      "    parse_class,\n",
-      "    parse_variable,\n",
-      "    parse_code_cell,\n",
-      "    parse_notebook,\n",
-      "    parse_python_file\n",
-      ")\n",
+      "# Import statements not available\n",
       "```\n",
       "\n",
       "#### Functions\n",
@@ -1186,7 +1177,13 @@
       "```\n",
       "\n",
       "```python\n",
-      "def _parse_deco...\n"
+      "def _parse_decorators(node: Union[ast.ClassDef, ast.FunctionDef]  # AST node with decorators\n",
+      "                     ) -> List[str]:                              # List of decorator names\n",
+      "    \"Parse decorators from an AST node\"\n",
+      "```\n",
+      "\n",
+      "```python\n",
+      "def...\n"
      ]
     }
    ],
