--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -69,22 +69,22 @@
     "    generators[generators<br/>Auto-generation Utilities]\n",
     "    cli[cli<br/>Command-Line Interface]\n",
     "\n",
-    "    parsers --> tree\n",
     "    parsers --> core\n",
+    "    parsers --> tree\n",
     "    tree --> core\n",
-    "    api_docs --> parsers\n",
-    "    api_docs --> tree\n",
     "    api_docs --> core\n",
+    "    api_docs --> tree\n",
     "    api_docs --> dependencies\n",
-    "    dependencies --> parsers\n",
-    "    dependencies --> dependencies\n",
+    "    api_docs --> parsers\n",
     "    dependencies --> core\n",
-    "    generators --> tree\n",
+    "    dependencies --> dependencies\n",
+    "    dependencies --> parsers\n",
     "    generators --> core\n",
+    "    generators --> tree\n",
     "    cli --> tree\n",
-    "    cli --> parsers\n",
     "    cli --> api_docs\n",
     "    cli --> dependencies\n",
+    "    cli --> parsers\n",
     "\n",
     "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
     "```\n",
@@ -145,14 +145,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm_nbdev_overview.core import (\n",
-    "    NotebookInfo,\n",
-    "    DirectoryInfo,\n",
-    "    get_notebook_files,\n",
-    "    get_subdirectories,\n",
-    "    read_notebook,\n",
-    "    get_cell_source\n",
-    ")\n",
+    "# No corresponding Python module found for 00_core\n",
     "```\n",
     "\n",
     "#### Functions\n",
@@ -227,19 +220,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm_nbdev_overview.parsers import (\n",
-    "    FunctionInfo,\n",
-    "    VariableInfo,\n",
-    "    ClassInfo,\n",
-    "    ModuleInfo,\n",
-    "    extract_docments_signature,\n",
-    "    parse_function,\n",
-    "    parse_class,\n",
-    "    parse_variable,\n",
-    "    parse_code_cell,\n",
-    "    parse_notebook,\n",
-    "    parse_python_file\n",
-    ")\n",
+    "# No corresponding Python module found for 01_parsers\n",
     "```\n",
     "\n",
     "#### Functions\n",
@@ -390,15 +371,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm_nbdev_overview.tree import (\n",
-    "    strip_markdown_links,\n",
-    "    generate_tree_lines,\n",
-    "    generate_tree,\n",
-    "    extract_notebook_info,\n",
-    "    generate_tree_with_descriptions,\n",
-    "    generate_subdirectory_tree,\n",
-    "    get_tree_summary\n",
-    ")\n",
+    "# No corresponding Python module found for 02_tree\n",
     "```\n",
     "\n",
     "#### Functions\n",
@@ -492,18 +465,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm_nbdev_overview.api_docs import (\n",
-    "    format_function_doc,\n",
-    "    format_class_doc,\n",
-    "    format_variable_doc,\n",
-    "    generate_module_overview,\n",
-    "    generate_project_api_docs,\n",
-    "    update_index_module_docs,\n",
-    "    add_project_structure_section,\n",
-    "    add_dependencies_section,\n",
-    "    add_cli_reference_section,\n",
-    "    update_index_comprehensive\n",
-    ")\n",
+    "# No corresponding Python module found for 03_api_docs\n",
     "```\n",
     "\n",
     "#### Functions\n",
@@ -653,15 +615,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm_nbdev_overview.dependencies import (\n",
-    "    ModuleDependency,\n",
-    "    DependencyGraph,\n",
-    "    extract_project_imports,\n",
-    "    analyze_module_dependencies,\n",
-    "    build_dependency_graph,\n",
-    "    generate_mermaid_diagram,\n",
-    "    generate_dependency_matrix\n",
-    ")\n",
+    "# No corresponding Python module found for 04_dependencies\n",
     "```\n",
     "\n",
     "#### Functions\n",
@@ -754,12 +708,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm_nbdev_overview.generators import (\n",
-    "    create_folder_notebook,\n",
-    "    generate_folder_notebook,\n",
-    "    generate_all_folder_notebooks,\n",
-    "    interactive_folder_notebook_generator\n",
-    ")\n",
+    "# No corresponding Python module found for 05_generators\n",
     "```\n",
     "\n",
     "#### Functions\n",
@@ -807,15 +756,7 @@
     "#### Import\n",
     "\n",
     "```python\n",
-    "from cjm_nbdev_overview.cli import (\n",
-    "    tree_cmd,\n",
-    "    api_cmd,\n",
-    "    deps_cmd,\n",
-    "    overview_cmd,\n",
-    "    update_index_cmd,\n",
-    "    update_comprehensive_cmd,\n",
-    "    main\n",
-    ")\n",
+    "# No corresponding Python module found for 06_cli\n",
     "```\n",
     "\n",
     "#### Functions\n",
