Fix nested module dependency parsing in Mermaid diagrams.

--- a/nbs/04_dependencies.ipynb
+++ b/nbs/04_dependencies.ipynb
@@ -145,7 +145,8 @@
     "            # Extract the module name after project name\n",
     "            module_parts = module.split('.')\n",
     "            if len(module_parts) > 1:\n",
-    "                target_module = module_parts[1]  # Get the module after project name\n",
+    "                # Join all parts after the project name to get full module path\n",
+    "                target_module = '.'.join(module_parts[1:])\n",
     "                \n",
     "                # Parse imported names\n",
     "                imported_names = [name.strip() for name in imports.split(',')]\n",
@@ -169,7 +170,8 @@
     "        if module.startswith(project_name):\n",
     "            module_parts = module.split('.')\n",
     "            if len(module_parts) > 1:\n",
-    "                target_module = module_parts[1]\n",
+    "                # Join all parts after the project name to get full module path\n",
+    "                target_module = '.'.join(module_parts[1:])\n",
     "                \n",
     "                return ModuleDependency(\n",
     "                    source=\"\",  # Will be filled by caller\n",
@@ -298,18 +300,28 @@
     "            return name + \"_mod\"\n",
     "        return name\n",
     "    \n",
+    "    def sanitize_node_id(\n",
+    "        name: str  # Module name with possible dots\n",
+    "    ) -> str:  # Sanitized node ID\n",
+    "        \"Convert module name to valid Mermaid node ID\"\n",
+    "        # Replace dots with underscores for valid Mermaid IDs\n",
+    "        return name.replace('.', '_')\n",
+    "    \n",
     "    lines = []\n",
     "    lines.append(f\"```mermaid\")\n",
     "    lines.append(f\"graph {direction}\")\n",
     "    \n",
     "    # Add nodes with descriptions\n",
     "    for module_name, module_info in graph.modules.items():\n",
-    "        escaped_name = escape_node_name(module_name)\n",
+    "        # Create a sanitized ID for Mermaid\n",
+    "        node_id = sanitize_node_id(module_name)\n",
+    "        escaped_id = escape_node_name(node_id)\n",
+    "        \n",
     "        # Create node label with original module name for display\n",
     "        if module_info.title:\n",
-    "            label = f\"{escaped_name}[{module_name}<br/>{module_info.title}]\"\n",
+    "            label = f\"{escaped_id}[{module_name}<br/>{module_info.title}]\"\n",
     "        else:\n",
-    "            label = f\"{escaped_name}[{module_name}]\"\n",
+    "            label = f\"{escaped_id}[{module_name}]\"\n",
     "        lines.append(f\"    {label}\")\n",
     "    \n",
     "    lines.append(\"\")  # Empty line for readability\n",
@@ -322,8 +334,11 @@
     "    \n",
     "    # Add edges\n",
     "    for (source, target), imported_names in dep_map.items():\n",
-    "        escaped_source = escape_node_name(source)\n",
-    "        escaped_target = escape_node_name(target)\n",
+    "        # Sanitize module names for Mermaid IDs\n",
+    "        source_id = sanitize_node_id(source)\n",
+    "        target_id = sanitize_node_id(target)\n",
+    "        escaped_source = escape_node_name(source_id)\n",
+    "        escaped_target = escape_node_name(target_id)\n",
     "        \n",
     "        if show_imports and imported_names:\n",
     "            # Remove duplicates and show what's imported\n",
@@ -429,32 +444,32 @@
      "text": [
       "\n",
       "api_docs depends on:\n",
-      "  - dependencies: *\n",
       "  - parsers: *\n",
-      "  - core: *\n",
       "  - tree: *\n",
+      "  - dependencies: *\n",
+      "  - core: *\n",
       "\n",
       "cli depends on:\n",
-      "  - parsers: *\n",
-      "  - api_docs: *\n",
       "  - tree: *\n",
       "  - dependencies: *\n",
+      "  - api_docs: *\n",
+      "  - parsers: *\n",
       "\n",
       "dependencies depends on:\n",
-      "  - parsers: ModuleInfo\n",
-      "  - dependencies: ModuleDependency\n",
       "  - dependencies: generate_mermaid_diagram\n",
       "  - parsers: *\n",
+      "  - dependencies: ModuleDependency\n",
       "  - dependencies: DependencyGraph\n",
+      "  - parsers: ModuleInfo\n",
       "  - core: *\n",
       "\n",
       "generators depends on:\n",
-      "  - core: *\n",
       "  - tree: *\n",
+      "  - core: *\n",
       "\n",
       "parsers depends on:\n",
-      "  - tree: extract_notebook_info\n",
       "  - core: *\n",
+      "  - tree: extract_notebook_info\n",
       "\n",
       "tree depends on:\n",
       "  - core: *\n"
@@ -490,7 +505,7 @@
       "    examples[examples<br/>Practical Usage Examples]\n",
       "    layout[layout<br/>Layout]\n",
       "    modern[modern<br/>Modern]\n",
-      "    StyleNode[style<br/>Style]\n",
+      "    style_mod[style<br/>Style]\n",
       "    types[types<br/>Type Definitions]\n",
       "    validation[validation<br/>Validation]\n",
       "    variants[variants<br/>Variants]\n",
@@ -505,15 +520,15 @@
       "    examples --> modern\n",
       "    examples --> colors\n",
       "    examples --> layout\n",
-      "    examples --> StyleNode\n",
+      "    examples --> style_mod\n",
       "    layout --> core\n",
       "    layout --> types\n",
       "    layout --> validation\n",
       "    modern --> core\n",
-      "    StyleNode --> core\n",
-      "    StyleNode --> types\n",
-      "    StyleNode --> colors\n",
-      "    StyleNode --> validation\n",
+      "    style_mod --> core\n",
+      "    style_mod --> types\n",
+      "    style_mod --> colors\n",
+      "    style_mod --> validation\n",
       "    variants --> core\n",
       "\n",
       "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
@@ -587,6 +602,176 @@
     "# Generate diagram that should now work without parse errors\n",
     "print(\"## Test Diagram with Reserved Keywords Handled\\n\")\n",
     "print(generate_mermaid_diagram(test_graph, direction=\"LR\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab7so7lzlmk",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing nested module import extraction:\n",
+      "--------------------------------------------------\n",
+      "Import: from cjm_fasthtml_daisyui.core.base import DaisyComponent, DaisySize\n",
+      "  Target module: core.base\n",
+      "  Imported names: DaisyComponent, DaisySize\n",
+      "\n",
+      "Import: from cjm_fasthtml_daisyui.core.colors import SemanticColor\n",
+      "  Target module: core.colors\n",
+      "  Imported names: SemanticColor\n",
+      "\n",
+      "Import: from cjm_fasthtml_daisyui.core.behaviors import InteractiveMixin, FormControlMixin\n",
+      "  Target module: core.behaviors\n",
+      "  Imported names: InteractiveMixin, FormControlMixin\n",
+      "\n",
+      "Import: from cjm_fasthtml_daisyui.core.modifiers import StyleType, HasStyles\n",
+      "  Target module: core.modifiers\n",
+      "  Imported names: StyleType, HasStyles\n",
+      "\n",
+      "Import: from cjm_fasthtml_daisyui.core.htmx import HTMXComponent, HTMXAttrs\n",
+      "  Target module: core.htmx\n",
+      "  Imported names: HTMXComponent, HTMXAttrs\n",
+      "\n",
+      "Import: from cjm_fasthtml_daisyui.core import *\n",
+      "  Target module: core\n",
+      "  Imported names: *\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test nested module imports\n",
+    "test_imports = [\n",
+    "    \"from cjm_fasthtml_daisyui.core.base import DaisyComponent, DaisySize\",\n",
+    "    \"from cjm_fasthtml_daisyui.core.colors import SemanticColor\",\n",
+    "    \"from cjm_fasthtml_daisyui.core.behaviors import InteractiveMixin, FormControlMixin\",\n",
+    "    \"from cjm_fasthtml_daisyui.core.modifiers import StyleType, HasStyles\",\n",
+    "    \"from cjm_fasthtml_daisyui.core.htmx import HTMXComponent, HTMXAttrs\",\n",
+    "    \"from cjm_fasthtml_daisyui.core import *\"\n",
+    "]\n",
+    "\n",
+    "print(\"Testing nested module import extraction:\")\n",
+    "print(\"-\" * 50)\n",
+    "for import_str in test_imports:\n",
+    "    dep = extract_project_imports(import_str, \"cjm_fasthtml_daisyui\")\n",
+    "    if dep:\n",
+    "        print(f\"Import: {import_str}\")\n",
+    "        print(f\"  Target module: {dep.target}\")\n",
+    "        print(f\"  Imported names: {', '.join(dep.imported_names)}\")\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "svex83cvhyo",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## Fixed Mermaid Diagram with Nested Modules\n",
+      "\n",
+      "```mermaid\n",
+      "graph LR\n",
+      "    actions.button[actions.button<br/>Button]\n",
+      "    core.animation[core.animation<br/>Animation & Transitions]\n",
+      "    core.base[core.base<br/>Core Base Classes]\n",
+      "    core.behaviors[core.behaviors<br/>Behavior States]\n",
+      "    core.colors[core.colors<br/>Colors]\n",
+      "    core.config[core.config<br/>Configuration]\n",
+      "    core.factory[core.factory<br/>Component Factory]\n",
+      "    core.htmx[core.htmx<br/>HTMX Integration]\n",
+      "    core.modifiers[core.modifiers<br/>Style Modifiers]\n",
+      "    core.parts[core.parts<br/>Component Parts]\n",
+      "    core.placement[core.placement<br/>Placement & Direction]\n",
+      "    core.resources[core.resources<br/>Resources]\n",
+      "    core.testing[core.testing<br/>Testing]\n",
+      "    core.validation[core.validation<br/>Validation]\n",
+      "    core.variants[core.variants<br/>Variant System]\n",
+      "\n",
+      "    actions.button --> core.base\n",
+      "    actions.button --> core.colors\n",
+      "    actions.button --> core.behaviors\n",
+      "    actions.button --> core.modifiers\n",
+      "    actions.button --> core.htmx\n",
+      "    core.base --> core.colors\n",
+      "    core.factory --> core.base\n",
+      "    core.htmx --> core.base\n",
+      "    core.testing --> core.validation\n",
+      "    core.validation --> core.config\n",
+      "\n",
+      "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
+      "```\n",
+      "\n",
+      "*10 cross-module dependencies detected*\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test with a graph that simulates the nested module structure from the bug report\n",
+    "nested_test_graph = DependencyGraph()\n",
+    "\n",
+    "# Add nested modules like in the bug report\n",
+    "nested_modules = [\n",
+    "    (\"actions.button\", \"Button\"),\n",
+    "    (\"core.animation\", \"Animation & Transitions\"),\n",
+    "    (\"core.base\", \"Core Base Classes\"),\n",
+    "    (\"core.behaviors\", \"Behavior States\"),\n",
+    "    (\"core.colors\", \"Colors\"),\n",
+    "    (\"core.config\", \"Configuration\"),\n",
+    "    (\"core.factory\", \"Component Factory\"),\n",
+    "    (\"core.htmx\", \"HTMX Integration\"),\n",
+    "    (\"core.modifiers\", \"Style Modifiers\"),\n",
+    "    (\"core.parts\", \"Component Parts\"),\n",
+    "    (\"core.placement\", \"Placement & Direction\"),\n",
+    "    (\"core.resources\", \"Resources\"),\n",
+    "    (\"core.testing\", \"Testing\"),\n",
+    "    (\"core.validation\", \"Validation\"),\n",
+    "    (\"core.variants\", \"Variant System\")\n",
+    "]\n",
+    "\n",
+    "for name, title in nested_modules:\n",
+    "    module = ModuleInfo(\n",
+    "        path=Path(f\"nbs/{name.replace('.', '/')}.ipynb\"),\n",
+    "        name=name,\n",
+    "        title=title,\n",
+    "        description=None,\n",
+    "        functions=[],\n",
+    "        classes=[],\n",
+    "        variables=[],\n",
+    "        imports=[]\n",
+    "    )\n",
+    "    nested_test_graph.add_module(module)\n",
+    "\n",
+    "# Add dependencies from actions.button to various core modules\n",
+    "dependencies_to_add = [\n",
+    "    (\"actions.button\", \"core.base\", [\"DaisyComponent\", \"DaisySize\"]),\n",
+    "    (\"actions.button\", \"core.colors\", [\"SemanticColor\"]),\n",
+    "    (\"actions.button\", \"core.behaviors\", [\"InteractiveMixin\", \"FormControlMixin\"]),\n",
+    "    (\"actions.button\", \"core.modifiers\", [\"StyleType\", \"HasStyles\"]),\n",
+    "    (\"actions.button\", \"core.htmx\", [\"HTMXComponent\", \"HTMXAttrs\"]),\n",
+    "    # Self-dependencies within core\n",
+    "    (\"core.base\", \"core.colors\", [\"*\"]),\n",
+    "    (\"core.factory\", \"core.base\", [\"*\"]),\n",
+    "    (\"core.htmx\", \"core.base\", [\"*\"]),\n",
+    "    (\"core.testing\", \"core.validation\", [\"*\"]),\n",
+    "    (\"core.validation\", \"core.config\", [\"*\"])\n",
+    "]\n",
+    "\n",
+    "for source, target, imported in dependencies_to_add:\n",
+    "    dep = ModuleDependency(source=source, target=target, import_type=\"from\", imported_names=imported)\n",
+    "    nested_test_graph.add_dependency(dep)\n",
+    "\n",
+    "# Generate the corrected diagram\n",
+    "print(\"## Fixed Mermaid Diagram with Nested Modules\\n\")\n",
+    "print(generate_mermaid_diagram(nested_test_graph, direction=\"LR\"))\n",
+    "print(f\"\\n*{len(nested_test_graph.dependencies)} cross-module dependencies detected*\")"
    ]
   },
   {
