Remove Mermaid diagram styling.

--- a/nbs/04_dependencies.ipynb
+++ b/nbs/04_dependencies.ipynb
@@ -350,10 +350,6 @@
     "        else:\n",
     "            lines.append(f\"    {escaped_source} --> {escaped_target}\")\n",
     "    \n",
-    "    # Add styling\n",
-    "    lines.append(\"\")\n",
-    "    lines.append(\"    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\")\n",
-    "    \n",
     "    lines.append(\"```\")\n",
     "    \n",
     "    return '\\n'.join(lines)"
@@ -445,31 +441,31 @@
       "\n",
       "api_docs depends on:\n",
       "  - parsers: *\n",
-      "  - tree: *\n",
       "  - dependencies: *\n",
+      "  - tree: *\n",
       "  - core: *\n",
       "\n",
       "cli depends on:\n",
-      "  - tree: *\n",
-      "  - dependencies: *\n",
-      "  - api_docs: *\n",
       "  - parsers: *\n",
+      "  - tree: *\n",
+      "  - api_docs: *\n",
+      "  - dependencies: *\n",
       "\n",
       "dependencies depends on:\n",
-      "  - dependencies: generate_mermaid_diagram\n",
-      "  - parsers: *\n",
       "  - dependencies: ModuleDependency\n",
-      "  - dependencies: DependencyGraph\n",
+      "  - parsers: *\n",
       "  - parsers: ModuleInfo\n",
+      "  - dependencies: generate_mermaid_diagram\n",
       "  - core: *\n",
+      "  - dependencies: DependencyGraph\n",
       "\n",
       "generators depends on:\n",
       "  - tree: *\n",
       "  - core: *\n",
       "\n",
       "parsers depends on:\n",
-      "  - core: *\n",
       "  - tree: extract_notebook_info\n",
+      "  - core: *\n",
       "\n",
       "tree depends on:\n",
       "  - core: *\n"
@@ -530,8 +526,6 @@
       "    style_mod --> colors\n",
       "    style_mod --> validation\n",
       "    variants --> core\n",
-      "\n",
-      "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
       "```\n"
      ]
     }
@@ -679,34 +673,32 @@
       "\n",
       "```mermaid\n",
       "graph LR\n",
-      "    actions.button[actions.button<br/>Button]\n",
-      "    core.animation[core.animation<br/>Animation & Transitions]\n",
-      "    core.base[core.base<br/>Core Base Classes]\n",
-      "    core.behaviors[core.behaviors<br/>Behavior States]\n",
-      "    core.colors[core.colors<br/>Colors]\n",
-      "    core.config[core.config<br/>Configuration]\n",
-      "    core.factory[core.factory<br/>Component Factory]\n",
-      "    core.htmx[core.htmx<br/>HTMX Integration]\n",
-      "    core.modifiers[core.modifiers<br/>Style Modifiers]\n",
-      "    core.parts[core.parts<br/>Component Parts]\n",
-      "    core.placement[core.placement<br/>Placement & Direction]\n",
-      "    core.resources[core.resources<br/>Resources]\n",
-      "    core.testing[core.testing<br/>Testing]\n",
-      "    core.validation[core.validation<br/>Validation]\n",
-      "    core.variants[core.variants<br/>Variant System]\n",
+      "    actions_button[actions.button<br/>Button]\n",
+      "    core_animation[core.animation<br/>Animation & Transitions]\n",
+      "    core_base[core.base<br/>Core Base Classes]\n",
+      "    core_behaviors[core.behaviors<br/>Behavior States]\n",
+      "    core_colors[core.colors<br/>Colors]\n",
+      "    core_config[core.config<br/>Configuration]\n",
+      "    core_factory[core.factory<br/>Component Factory]\n",
+      "    core_htmx[core.htmx<br/>HTMX Integration]\n",
+      "    core_modifiers[core.modifiers<br/>Style Modifiers]\n",
+      "    core_parts[core.parts<br/>Component Parts]\n",
+      "    core_placement[core.placement<br/>Placement & Direction]\n",
+      "    core_resources[core.resources<br/>Resources]\n",
+      "    core_testing[core.testing<br/>Testing]\n",
+      "    core_validation[core.validation<br/>Validation]\n",
+      "    core_variants[core.variants<br/>Variant System]\n",
       "\n",
-      "    actions.button --> core.base\n",
-      "    actions.button --> core.colors\n",
-      "    actions.button --> core.behaviors\n",
-      "    actions.button --> core.modifiers\n",
-      "    actions.button --> core.htmx\n",
-      "    core.base --> core.colors\n",
-      "    core.factory --> core.base\n",
-      "    core.htmx --> core.base\n",
-      "    core.testing --> core.validation\n",
-      "    core.validation --> core.config\n",
-      "\n",
-      "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
+      "    actions_button --> core_base\n",
+      "    actions_button --> core_colors\n",
+      "    actions_button --> core_behaviors\n",
+      "    actions_button --> core_modifiers\n",
+      "    actions_button --> core_htmx\n",
+      "    core_base --> core_colors\n",
+      "    core_factory --> core_base\n",
+      "    core_htmx --> core_base\n",
+      "    core_testing --> core_validation\n",
+      "    core_validation --> core_config\n",
       "```\n",
       "\n",
       "*10 cross-module dependencies detected*\n"
